--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <header class="header header_main">
     <div class="wrapper">
         <div class="header__top">
-
             <a class="logo" href="index.html">
                 <img src="images/logo.svg" alt="Агенство интернет рекламы Performance" class="logo__img">
                 <span class="logo__text">Агентство интернет рекламы</span>
@@ -37,8 +36,8 @@
                 </button>
             </div>
 
-            <nav class="nav__header-top">
-                <ul class="header__top__nav-list">
+            <nav class="nav__header-top headerNav_adaptive">
+                <ul class="header__top__nav-list" aria-label="main navigation основная навигация">
                     <li class="header__top__nav-item">
                         <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
                     </li>
@@ -49,6 +48,77 @@
                         <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
                     </li>
                 </ul>
+                <ul class="header__nav-list_bottom header__nav-list_bottom_main" aria-label="services navigation услуги">
+                    <li>
+                        <a href="#" class="header__nav-list__link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <g id="icon/action/vertical_split_24px">
+                                    <path id="icon/action/vertical_split_24px_2" fill-rule="evenodd"
+                                          clip-rule="evenodd"
+                                          d="M11 5H3V7H11V5ZM3 9H11V11H3V9ZM11 13H3V15H11V13ZM11 17H3V19H11V17ZM19 7V17H15V7H19ZM13 5H21V19H13V5Z"
+                                          fill="#4F4F4F"/>
+                                </g>
+                            </svg>
+                            КОНТЕКСТНАЯ РЕКЛАМА
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__nav-list__link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <g id="icon/action/supervised_user_circle_24px">
+                                    <path id="icon/action/supervised_user_circle_24px_2" fill-rule="evenodd"
+                                          clip-rule="evenodd"
+                                          d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12.51 9.99C12.51 8.34 11.16 6.99 9.51 6.99C7.86 6.99 6.51 8.34 6.51 9.99C6.51 11.64 7.86 12.99 9.51 12.99C11.16 12.99 12.51 11.64 12.51 9.99ZM9.51 10.99C8.96 10.99 8.51 10.54 8.51 9.99C8.51 9.44 8.96 8.99 9.51 8.99C10.06 8.99 10.51 9.44 10.51 9.99C10.51 10.54 10.06 10.99 9.51 10.99ZM18.01 10.99C18.01 12.1 17.12 12.99 16.01 12.99C14.9 12.99 14.01 12.1 14.01 10.99C14 9.88 14.9 8.99 16.01 8.99C17.12 8.99 18.01 9.88 18.01 10.99ZM9.51 16C8.12 16 6.53 16.57 5.85 17.11C7.22 18.76 9.24 19.84 11.51 19.97V17.19C11.51 15.3 14.49 14.49 16.01 14.49C16.89 14.49 18.25 14.77 19.25 15.36C19.73 14.33 20 13.19 20 11.99C20 7.58 16.41 3.99 12 3.99C7.59 3.99 4 7.58 4 11.99C4 13.22 4.28 14.38 4.78 15.42C6.12 14.44 8.21 13.99 9.51 13.99C9.95 13.99 10.48 14.05 11.04 14.15C10.41 14.72 9.98 15.37 9.74 16.01C9.69867 16.01 9.65733 16.0073 9.61738 16.0048C9.58 16.0023 9.54383 16 9.51 16Z"
+                                          fill="#4F4F4F"/>
+                                </g>
+                            </svg>
+                            ПРОДВИЖЕНИЕ В СОЦСЕТЯХ
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__nav-list__link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <g id="icon/action/trending_up_24px">
+                                    <path id="icon/action/trending_up_24px_2"
+                                          d="M16 6L18.29 8.29L13.41 13.17L9.41 9.17L2 16.59L3.41 18L9.41 12L13.41 16L19.71 9.71L22 12V6H16Z"
+                                          fill="#4F4F4F"/>
+                                </g>
+                            </svg>
+                            АНАЛИТИКА
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__nav-list__link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <g id="icon/action/track_changes_24px">
+                                    <path id="icon/action/track_changes_24px_2"
+                                          d="M19.07 4.93L17.66 6.34C19.1 7.79 20 9.79 20 12C20 16.42 16.42 20 12 20C7.58 20 4 16.42 4 12C4 7.92 7.05 4.56 11 4.07V6.09C8.16 6.57 6 9.03 6 12C6 15.31 8.69 18 12 18C15.31 18 18 15.31 18 12C18 10.34 17.33 8.84 16.24 7.76L14.83 9.17C15.55 9.9 16 10.9 16 12C16 14.21 14.21 16 12 16C9.79 16 8 14.21 8 12C8 10.14 9.28 8.59 11 8.14V10.28C10.4 10.63 10 11.26 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 11.26 13.6 10.62 13 10.28V2H12C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 9.24 20.88 6.74 19.07 4.93Z"
+                                          fill="#4F4F4F"/>
+                                </g>
+                            </svg>
+                            PROGRAMMATIC РЕКЛАМА
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="header__nav-list__link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <g id="icon/action/view_headline_24px">
+                                    <path id="icon/action/view_headline_24px_2" fill-rule="evenodd"
+                                          clip-rule="evenodd"
+                                          d="M7 7V5H17V7H7ZM4 11H20V9H4V11ZM20 15H4V13H20V15ZM17 19H7V17H17V19Z"
+                                          fill="#4F4F4F"/>
+                                </g>
+                            </svg>
+                            ДРУГИЕ УСЛУГИ
+                        </a>
+                    </li>
+                </ul>
+
             </nav>
 
             <div class="header__top__right-block">
@@ -63,83 +133,14 @@
     </div>
 
     <div class="line_white"></div>
+</header>
 
-    <div class="wrapper">
-        <div class="header__bottom header__bottom_main">
-            <div class="header_main__content">
-                <nav class="nav__header-services">
-                    <ul class="header__nav-list_bottom header__nav-list_bottom_main">
-                        <li>
-                            <a href="#" class="header__nav-list__link item1">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g id="icon/action/vertical_split_24px">
-                                        <path id="icon/action/vertical_split_24px_2" fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M11 5H3V7H11V5ZM3 9H11V11H3V9ZM11 13H3V15H11V13ZM11 17H3V19H11V17ZM19 7V17H15V7H19ZM13 5H21V19H13V5Z"
-                                              fill="#4F4F4F"/>
-                                    </g>
-                                </svg>
-                                КОНТЕКСТНАЯ РЕКЛАМА
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__nav-list__link item2">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g id="icon/action/supervised_user_circle_24px">
-                                        <path id="icon/action/supervised_user_circle_24px_2" fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12.51 9.99C12.51 8.34 11.16 6.99 9.51 6.99C7.86 6.99 6.51 8.34 6.51 9.99C6.51 11.64 7.86 12.99 9.51 12.99C11.16 12.99 12.51 11.64 12.51 9.99ZM9.51 10.99C8.96 10.99 8.51 10.54 8.51 9.99C8.51 9.44 8.96 8.99 9.51 8.99C10.06 8.99 10.51 9.44 10.51 9.99C10.51 10.54 10.06 10.99 9.51 10.99ZM18.01 10.99C18.01 12.1 17.12 12.99 16.01 12.99C14.9 12.99 14.01 12.1 14.01 10.99C14 9.88 14.9 8.99 16.01 8.99C17.12 8.99 18.01 9.88 18.01 10.99ZM9.51 16C8.12 16 6.53 16.57 5.85 17.11C7.22 18.76 9.24 19.84 11.51 19.97V17.19C11.51 15.3 14.49 14.49 16.01 14.49C16.89 14.49 18.25 14.77 19.25 15.36C19.73 14.33 20 13.19 20 11.99C20 7.58 16.41 3.99 12 3.99C7.59 3.99 4 7.58 4 11.99C4 13.22 4.28 14.38 4.78 15.42C6.12 14.44 8.21 13.99 9.51 13.99C9.95 13.99 10.48 14.05 11.04 14.15C10.41 14.72 9.98 15.37 9.74 16.01C9.69867 16.01 9.65733 16.0073 9.61738 16.0048C9.58 16.0023 9.54383 16 9.51 16Z"
-                                              fill="#4F4F4F"/>
-                                    </g>
-                                </svg>
-                                ПРОДВИЖЕНИЕ В СОЦСЕТЯХ
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__nav-list__link item3">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g id="icon/action/trending_up_24px">
-                                        <path id="icon/action/trending_up_24px_2"
-                                              d="M16 6L18.29 8.29L13.41 13.17L9.41 9.17L2 16.59L3.41 18L9.41 12L13.41 16L19.71 9.71L22 12V6H16Z"
-                                              fill="#4F4F4F"/>
-                                    </g>
-                                </svg>
-                                АНАЛИТИКА
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__nav-list__link item4">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g id="icon/action/track_changes_24px">
-                                        <path id="icon/action/track_changes_24px_2"
-                                              d="M19.07 4.93L17.66 6.34C19.1 7.79 20 9.79 20 12C20 16.42 16.42 20 12 20C7.58 20 4 16.42 4 12C4 7.92 7.05 4.56 11 4.07V6.09C8.16 6.57 6 9.03 6 12C6 15.31 8.69 18 12 18C15.31 18 18 15.31 18 12C18 10.34 17.33 8.84 16.24 7.76L14.83 9.17C15.55 9.9 16 10.9 16 12C16 14.21 14.21 16 12 16C9.79 16 8 14.21 8 12C8 10.14 9.28 8.59 11 8.14V10.28C10.4 10.63 10 11.26 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 11.26 13.6 10.62 13 10.28V2H12C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 9.24 20.88 6.74 19.07 4.93Z"
-                                              fill="#4F4F4F"/>
-                                    </g>
-                                </svg>
-                                PROGRAMMATIC РЕКЛАМА
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__nav-list__link item5">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g id="icon/action/view_headline_24px">
-                                        <path id="icon/action/view_headline_24px_2" fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M7 7V5H17V7H7ZM4 11H20V9H4V11ZM20 15H4V13H20V15ZM17 19H7V17H17V19Z"
-                                              fill="#4F4F4F"/>
-                                    </g>
-                                </svg>
-                                ДРУГИЕ УСЛУГИ
-                            </a>
-                        </li>
-                    </ul>
-
-                    <div class="header_main__links_portfolio">
+<div class="s_hero">
+    <div class="wrapper_fullHD">
+        <div class="hero hero_main">
+            <div class="wrapper">
+                <div class="hero_main__content">
+                    <div class="hero_main__portfolio-link">
                         <span>ПОСМОТРИТЕ<br/>НАШИ РАБОТЫ</span>
                         <a href="#" class="btn btn_round btn_round_light-blue">
                             <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -147,21 +148,18 @@
                             </svg>
                         </a>
                     </div>
-
-                </nav>
-                <div class="header_main__content__right-block">
-                    <h1 class="title__h1_main">ГАРАНТИРОВАННОЕ ПРИВЛЕЧЕНИЕ ЛИДОВ В ВАШ БИЗНЕС</h1>
-                    <p>Контекстная реклама и таргетированная реклама со сквозной аналитикой и оптимизацией по CPL, ROI и
-                        ДРР</p>
-                    <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ОСТАВИТЬ
-                        ЗАЯВКУ</a>
+                    <div class="hero_main__content__right-block">
+                        <h1 class="title__h1_main">ГАРАНТИРОВАННОЕ ПРИВЛЕЧЕНИЕ ЛИДОВ В ВАШ БИЗНЕС</h1>
+                        <p>Контекстная реклама и таргетированная реклама со сквозной аналитикой и оптимизацией по CPL, ROI и
+                            ДРР</p>
+                        <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ОСТАВИТЬ
+                            ЗАЯВКУ</a>
+                    </div>
                 </div>
-
             </div>
-
         </div>
     </div>
-</header>
+</div>
 
 <div class="s_benefits">
     <div class="wrapper_fullHD">
@@ -363,7 +361,7 @@
 
 <div class="s_approach">
     <div class="wrapper_fullHD">
-        <div class="approach">
+        <div class="approach approach_main">
             <div class="wrapper_right">
                 <img src="images/pogodin.jpg" alt="Погодин" class="approach__img">
                 <div class="approach__text-block">
@@ -616,14 +614,14 @@
     <div class="wrapper_fullHD contacts_main">
         <div class="contacts_main__left-block">
             <div class="wrapper_half">
-                <h3 class="white">ЗАКАЖИТЕ РАСЧЕТ ДЛЯ ПРОДВИЖЕНИЯ БИЗНЕСА</h3>
+                <h3 class="white">ЗАКАЖИТЕ РАСЧЕТ ДЛЯ<br>ПРОДВИЖЕНИЯ БИЗНЕСА</h3>
                 <form method="post"
                       action="#"
                       enctype="multipart/form-data"
-                      class="modal-form"
+                      class="form_main"
                       data-form-ids="popup">
 
-                    <div class="modal__input-wrapper">
+                    <div class="form__input-wrapper">
                         <input type="text" name="modal_name" placeholder="Введите ваше имя" class="form-input" required="">
                         <input type="text" name="modal_phone" placeholder="Введите ваш телефон"
                                class="form-input form-input--tel" required="">
@@ -632,7 +630,7 @@
                         <textarea name="modal_message" class="form-input form-textarea" id="" cols="30" rows="2" placeholder="Ваш проект"></textarea>
                     </div>
 
-                    <div class="modal-form__row">
+                    <div class="form__row">
                         <button type="button" class="btn btn_small btn_small_white" name="add_file" value="" >
                             ПРИКРЕПИТЬ ФАЙЛ
                         </button>
@@ -646,14 +644,14 @@
                         </div>
                     </div>
 
-                    <div class="modal-form__row">
+                    <div class="form__row">
                         <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
                         <label class="notice_checked__label" for="notice">
                             Отправляя заявку, я соглашаюсь на обработку персональных данных
                         </label>
                     </div>
 
-                    <div class="modal-form__row">
+                    <div class="form__row">
                         <button type="submit" class="btn_submit btn btn_submit_white" name="send" value="" >
                             ОСТАВИТЬ ЗАЯВКУ НА ИДИВИДУАЛЬНЫЙ РАСЧЕТ
                         </button>
@@ -663,16 +661,16 @@
         </div>
         <div class="contacts_main__right-block">
             <div class="wrapper_half">
-                <ul class="contacts__list">
+                <ul class="contacts__list contacts__list_main">
                     <li class="contacts__item">
                         <a href="tel:+78126655112" class="contacts__phone">
                             +7 812 665 51 12
                         </a>
                     </li>
-                    <li class="contacts__item contacts__item_address">Санкт-Петербург, ул. Заозерная, 8А, офис 301</li>
                     <li class="contacts__item contacts__item_email">
                         <a href="mailto:info@perfomance-group.ru" class="email">info@perfomance-group.ru</a>
                     </li>
+                    <li class="contacts__item contacts__item_address">Санкт-Петербург, ул. Заозерная, 8А, офис 301</li>
                 </ul>
                 <div id="map">
                     <img src="./images/map.jpg" alt="">
