--- a/complex.html
+++ b/complex.html
@@ -36,9 +36,9 @@
                 </button>
             </div>
 
-            <nav class="nav__header-top">
+            <nav class="nav__header-top headerNav_adaptive">
                 <ul class="header__top__nav-list">
-                    <li class="header__top__nav-item">
+                    <li class="header__top__nav-item" aria-label="main navigation основная навигация">
                         <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
                     </li>
                     <li class="header__top__nav-item">
@@ -48,26 +48,8 @@
                         <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
                     </li>
                 </ul>
-            </nav>
-
-            <div class="header__top__right-block">
-                <a href="tel:+78126655112" type="" class="btn btn_transperent btn_phone-icon">
-                    +7 812 665 51 12
-                    <!--                    <span class="btn__content">+7 812 665 51 12</span>-->
-                </a>
-                <span class="work-time">Пн-пт, с 10:00 до 19:00</span>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="line_white"></div>
-
-    <div class="wrapper">
-        <div class="header__bottom">
-            <nav class="nav__header-services">
-                <ul class="header__nav-list_bottom header__nav-list_bottom_common">
-                    <li>
+                <ul class="header__nav-list_bottom header__nav-list_bottom_common" aria-label="services navigation услуги">
+                    <ali>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +62,7 @@
                             </svg>
                             КОНТЕКСТНАЯ РЕКЛАМА
                         </a>
-                    </li>
+                    </ali>
                     <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -136,9 +118,26 @@
                         </a>
                     </li>
                 </ul>
+
             </nav>
+
+            <div class="header__top__right-block">
+                <a href="tel:+78126655112" type="" class="btn btn_transperent btn_phone-icon">
+                    +7 812 665 51 12
+                    <!--                    <span class="btn__content">+7 812 665 51 12</span>-->
+                </a>
+                <span class="work-time">Пн-пт, с 10:00 до 19:00</span>
+            </div>
+
         </div>
     </div>
+
+    <div class="line_white"></div>
+
+    <!--    <div class="wrapper">-->
+    <!--        <div class="header__bottom">-->
+    <!--        </div>-->
+    <!--    </div>-->
 </header>
 
 <div class="s_hero">
@@ -148,10 +147,10 @@
                 <div class="hero__first-row">
                     <div class="hero__first-row__left">
                         <h1 class="white">КОНТЕКСТНАЯ РЕКЛАМА С АНАЛИТИКОЙ ОТ КЛИКОВ ДО ПРОДАЖ</h1>
-                        <a href="/services.html" class="btn btn_white">Все услуги</a>
+                        <a href="/services.html" class="btn btn_transperent_white btn_arrowL">Все услуги</a>
                     </div>
                     <div class="hero__first-row__right">
-                        <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
+                        <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
                     </div>
                 </div>
                 <div class="hero__second-row">
@@ -189,7 +188,7 @@
                 </ul>
                 <div class="prices__info">Стоимость настройки и ведения: <span class="blue">20 000 руб/мес.</span></div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
                 </div>
             </div>
@@ -204,7 +203,7 @@
                 <div class="prices__info">Стоимость настройки и ведения:<br><span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
                 </div>
             </div>
@@ -219,7 +218,7 @@
                 <div class="prices__info">Ведение кампании на Я.Маркете:<br><span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
                 </div>
             </div>
@@ -512,12 +511,13 @@
 
 <div class="s_approach">
     <div class="wrapper_fullHD">
-        <div class="approach">
+        <div class="approach approach_complex">
             <div class="wrapper_right">
-                <img src="images/bg_complex_avtor.png" class="approach__img">
-                <div class="approach__text-block">
-                    <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД К ИНТЕРНЕТ-РЕКЛАМЕ</h2>
-
+                <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД<br>К КОНТЕКСТНОЙ РЕКЛАМЕ</h2>
+                <img src="images/bg_complex_avtor.png" class="approach__img_complex">
+            </div>
+            <div class="wrapper">
+                <div class="approach__text-block_complex">
                     <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
                         объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
                         исследований способствует подготовке и реализации поставленных обществом задач. Не следует,
@@ -540,34 +540,34 @@
             <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ<br>ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
             <ul class="voronka__list">
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Рассказываем о продукте</span>
+                    <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
                     <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают продукт, ищут решения проблемы</span>
-                    <span class="voronka__line__block voronka__line__block_right">Баннерная реклама в РСЯ и КМС, видеореклама и YouTube</span>
+                    <span class="voronka__line__block voronka__line__block_right">Баннерная реклама в РСЯ и КМС,<br>видеореклама и YouTube</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес, стимулируем покупку</span>
+                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес,<br>стимулируем покупку</span>
                     <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают его изучать</span>
-                    <span class="voronka__line__block voronka__line__block_right">Графическая рреклама в сетях (РСЯ и КМС), поисковый баннер на Яндексе</span>
+                    <span class="voronka__line__block voronka__line__block_right">Графическая рреклама в сетях (РСЯ<br>и КМС), поисковый баннер на<br>Яндексе</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Привлекаем пользователя на сайте</span>
+                    <span class="voronka__line__block voronka__line__block_left">Привлекаем<br>пользователя на сайте</span>
                     <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где приобрести продукт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Поисковые кампании Яндекс.Директ, Google.Ads, поисковы ремаркетинг</span>
+                    <span class="voronka__line__block voronka__line__block_right">Поисковые кампании Яндекс.Директ,<br>Google.Ads, поисковы ремаркетинг</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей,<br>ушедших с сайта без покупки</span>
                     <span class="voronka__line__block voronka__line__block_center">Перешли на сайт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
+                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads,<br>Facebook, рассылка Вконтакте, Instagram</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей,<br>ушедших с сайта без покупки</span>
                     <span class="voronka__line__block voronka__line__block_center">Купили товар на сайте</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
+                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads,<br>Facebook, рассылка Вконтакте, Instagram</span>
                 </li>
                  <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Запускаем локальную рекламу, стимулируем посещение точки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Запускаем локальную рекламу,<br>стимулируем посещение точки</span>
                     <span class="voronka__line__block voronka__line__block_center">Находятся рядом с офисом</span>
-                    <span class="voronka__line__block voronka__line__block_right">Гиперлокальная реклама Яндекс.Директ, реклама по районам в Google.Ads</span>
+                    <span class="voronka__line__block voronka__line__block_right">Гиперлокальная реклама Яндекс.Директ,<br>реклама по районам в Google.Ads</span>
                 </li>
             </ul>
         </div>
@@ -638,7 +638,7 @@
     <div class="wrapper_fullHD">
         <div class="callback">
             <div class="wrapper">
-                <h3 class="white">У ВАС ЕСТЬ ПОХОЖАЯ ЗАДАЧА? ОСТАВЬТЕ ЗАЯВКУ И МЫ ПРЕДЛОЖИМ ВАРИАНТЫ ЕЕ РЕШЕНИЯ:</h3>
+                <h3 class="white">У ВАС ЕСТЬ ПОХОЖАЯ ЗАДАЧА? ОСТАВЬТЕ ЗАЯВКУ<br>И МЫ ПРЕДЛОЖИМ ВАРИАНТЫ ЕЕ РЕШЕНИЯ:</h3>
                 <form method="post"
                       action="#"
                       enctype="multipart/form-data"
