--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
         </button>
       </div>
 
-      <nav class="nav__header-top">
+      <nav class="nav__header-top headerNav_adaptive">
         <ul class="header__top__nav-list">
-          <li class="header__top__nav-item">
+          <li class="header__top__nav-item" aria-label="main navigation основная навигация">
             <a href="#" class="header__top__nav-link">О КОМПАНИИ</a>
           </li>
           <li class="header__top__nav-item">
@@ -48,6 +48,77 @@
             <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
           </li>
         </ul>
+        <ul class="header__nav-list_bottom header__nav-list_bottom_common" aria-label="services navigation услуги">
+          <ali>
+            <a href="#" class="header__nav-list__link">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <g id="icon/action/vertical_split_24px">
+                  <path id="icon/action/vertical_split_24px_2" fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M11 5H3V7H11V5ZM3 9H11V11H3V9ZM11 13H3V15H11V13ZM11 17H3V19H11V17ZM19 7V17H15V7H19ZM13 5H21V19H13V5Z"
+                        fill="#4F4F4F"/>
+                </g>
+              </svg>
+              КОНТЕКСТНАЯ РЕКЛАМА
+            </a>
+          </ali>
+          <li>
+            <a href="#" class="header__nav-list__link">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <g id="icon/action/supervised_user_circle_24px">
+                  <path id="icon/action/supervised_user_circle_24px_2" fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12.51 9.99C12.51 8.34 11.16 6.99 9.51 6.99C7.86 6.99 6.51 8.34 6.51 9.99C6.51 11.64 7.86 12.99 9.51 12.99C11.16 12.99 12.51 11.64 12.51 9.99ZM9.51 10.99C8.96 10.99 8.51 10.54 8.51 9.99C8.51 9.44 8.96 8.99 9.51 8.99C10.06 8.99 10.51 9.44 10.51 9.99C10.51 10.54 10.06 10.99 9.51 10.99ZM18.01 10.99C18.01 12.1 17.12 12.99 16.01 12.99C14.9 12.99 14.01 12.1 14.01 10.99C14 9.88 14.9 8.99 16.01 8.99C17.12 8.99 18.01 9.88 18.01 10.99ZM9.51 16C8.12 16 6.53 16.57 5.85 17.11C7.22 18.76 9.24 19.84 11.51 19.97V17.19C11.51 15.3 14.49 14.49 16.01 14.49C16.89 14.49 18.25 14.77 19.25 15.36C19.73 14.33 20 13.19 20 11.99C20 7.58 16.41 3.99 12 3.99C7.59 3.99 4 7.58 4 11.99C4 13.22 4.28 14.38 4.78 15.42C6.12 14.44 8.21 13.99 9.51 13.99C9.95 13.99 10.48 14.05 11.04 14.15C10.41 14.72 9.98 15.37 9.74 16.01C9.69867 16.01 9.65733 16.0073 9.61738 16.0048C9.58 16.0023 9.54383 16 9.51 16Z"
+                        fill="#4F4F4F"/>
+                </g>
+              </svg>
+              ПРОДВИЖЕНИЕ В СОЦСЕТЯХ
+            </a>
+          </li>
+          <li>
+            <a href="#" class="header__nav-list__link">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <g id="icon/action/trending_up_24px">
+                  <path id="icon/action/trending_up_24px_2"
+                        d="M16 6L18.29 8.29L13.41 13.17L9.41 9.17L2 16.59L3.41 18L9.41 12L13.41 16L19.71 9.71L22 12V6H16Z"
+                        fill="#4F4F4F"/>
+                </g>
+              </svg>
+              АНАЛИТИКА
+            </a>
+          </li>
+          <li>
+            <a href="#" class="header__nav-list__link">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <g id="icon/action/track_changes_24px">
+                  <path id="icon/action/track_changes_24px_2"
+                        d="M19.07 4.93L17.66 6.34C19.1 7.79 20 9.79 20 12C20 16.42 16.42 20 12 20C7.58 20 4 16.42 4 12C4 7.92 7.05 4.56 11 4.07V6.09C8.16 6.57 6 9.03 6 12C6 15.31 8.69 18 12 18C15.31 18 18 15.31 18 12C18 10.34 17.33 8.84 16.24 7.76L14.83 9.17C15.55 9.9 16 10.9 16 12C16 14.21 14.21 16 12 16C9.79 16 8 14.21 8 12C8 10.14 9.28 8.59 11 8.14V10.28C10.4 10.63 10 11.26 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 11.26 13.6 10.62 13 10.28V2H12C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 9.24 20.88 6.74 19.07 4.93Z"
+                        fill="#4F4F4F"/>
+                </g>
+              </svg>
+              PROGRAMMATIC РЕКЛАМА
+            </a>
+          </li>
+          <li>
+            <a href="#" class="header__nav-list__link">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <g id="icon/action/view_headline_24px">
+                  <path id="icon/action/view_headline_24px_2" fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M7 7V5H17V7H7ZM4 11H20V9H4V11ZM20 15H4V13H20V15ZM17 19H7V17H17V19Z"
+                        fill="#4F4F4F"/>
+                </g>
+              </svg>
+              ДРУГИЕ УСЛУГИ
+            </a>
+          </li>
+        </ul>
+
       </nav>
 
       <div class="header__top__right-block">
@@ -63,89 +134,17 @@
 
   <div class="line_white"></div>
 
-  <div class="wrapper">
-    <div class="header__bottom">
-        <nav class="nav__header-services">
-          <ul class="header__nav-list_bottom header__nav-list_bottom_common">
-            <li>
-              <a href="#" class="header__nav-list__link">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <g id="icon/action/vertical_split_24px">
-                    <path id="icon/action/vertical_split_24px_2" fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M11 5H3V7H11V5ZM3 9H11V11H3V9ZM11 13H3V15H11V13ZM11 17H3V19H11V17ZM19 7V17H15V7H19ZM13 5H21V19H13V5Z"
-                          fill="#4F4F4F"/>
-                  </g>
-                </svg>
-                КОНТЕКСТНАЯ РЕКЛАМА
-              </a>
-            </li>
-            <li>
-              <a href="#" class="header__nav-list__link">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <g id="icon/action/supervised_user_circle_24px">
-                    <path id="icon/action/supervised_user_circle_24px_2" fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12.51 9.99C12.51 8.34 11.16 6.99 9.51 6.99C7.86 6.99 6.51 8.34 6.51 9.99C6.51 11.64 7.86 12.99 9.51 12.99C11.16 12.99 12.51 11.64 12.51 9.99ZM9.51 10.99C8.96 10.99 8.51 10.54 8.51 9.99C8.51 9.44 8.96 8.99 9.51 8.99C10.06 8.99 10.51 9.44 10.51 9.99C10.51 10.54 10.06 10.99 9.51 10.99ZM18.01 10.99C18.01 12.1 17.12 12.99 16.01 12.99C14.9 12.99 14.01 12.1 14.01 10.99C14 9.88 14.9 8.99 16.01 8.99C17.12 8.99 18.01 9.88 18.01 10.99ZM9.51 16C8.12 16 6.53 16.57 5.85 17.11C7.22 18.76 9.24 19.84 11.51 19.97V17.19C11.51 15.3 14.49 14.49 16.01 14.49C16.89 14.49 18.25 14.77 19.25 15.36C19.73 14.33 20 13.19 20 11.99C20 7.58 16.41 3.99 12 3.99C7.59 3.99 4 7.58 4 11.99C4 13.22 4.28 14.38 4.78 15.42C6.12 14.44 8.21 13.99 9.51 13.99C9.95 13.99 10.48 14.05 11.04 14.15C10.41 14.72 9.98 15.37 9.74 16.01C9.69867 16.01 9.65733 16.0073 9.61738 16.0048C9.58 16.0023 9.54383 16 9.51 16Z"
-                          fill="#4F4F4F"/>
-                  </g>
-                </svg>
-                ПРОДВИЖЕНИЕ В СОЦСЕТЯХ
-              </a>
-            </li>
-            <li>
-              <a href="#" class="header__nav-list__link">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <g id="icon/action/trending_up_24px">
-                    <path id="icon/action/trending_up_24px_2"
-                          d="M16 6L18.29 8.29L13.41 13.17L9.41 9.17L2 16.59L3.41 18L9.41 12L13.41 16L19.71 9.71L22 12V6H16Z"
-                          fill="#4F4F4F"/>
-                  </g>
-                </svg>
-                АНАЛИТИКА
-              </a>
-            </li>
-            <li>
-              <a href="#" class="header__nav-list__link">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <g id="icon/action/track_changes_24px">
-                    <path id="icon/action/track_changes_24px_2"
-                          d="M19.07 4.93L17.66 6.34C19.1 7.79 20 9.79 20 12C20 16.42 16.42 20 12 20C7.58 20 4 16.42 4 12C4 7.92 7.05 4.56 11 4.07V6.09C8.16 6.57 6 9.03 6 12C6 15.31 8.69 18 12 18C15.31 18 18 15.31 18 12C18 10.34 17.33 8.84 16.24 7.76L14.83 9.17C15.55 9.9 16 10.9 16 12C16 14.21 14.21 16 12 16C9.79 16 8 14.21 8 12C8 10.14 9.28 8.59 11 8.14V10.28C10.4 10.63 10 11.26 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 11.26 13.6 10.62 13 10.28V2H12C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 9.24 20.88 6.74 19.07 4.93Z"
-                          fill="#4F4F4F"/>
-                  </g>
-                </svg>
-                PROGRAMMATIC РЕКЛАМА
-              </a>
-            </li>
-            <li>
-              <a href="#" class="header__nav-list__link">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <g id="icon/action/view_headline_24px">
-                    <path id="icon/action/view_headline_24px_2" fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M7 7V5H17V7H7ZM4 11H20V9H4V11ZM20 15H4V13H20V15ZM17 19H7V17H17V19Z"
-                          fill="#4F4F4F"/>
-                  </g>
-                </svg>
-                ДРУГИЕ УСЛУГИ
-              </a>
-            </li>
-          </ul>
-        </nav>
-    </div>
-  </div>
+  <!--    <div class="wrapper">-->
+  <!--        <div class="header__bottom">-->
+  <!--        </div>-->
+  <!--    </div>-->
 </header>
 
 <div class="s_portfolio">
   <div class="wrapper">
     <div class="content__header">
       <h1 class="title__h1">НАШИ УСЛУГИ</h1>
-      <nav class="breadcrumbs">
+      <nav class="breadcrumbs innerBlueStripe">
         <ul class="breadcrumbs__list">
           <li><a href="index.html">Главная</a></li>
           <li><span>Портфолио</span></li>
@@ -220,8 +219,10 @@
 
       <div class="portfolio__pagination">
 
-        <button type="button" class="portfolio__pagination__prev">
-          <svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="34" cy="34" r="34" fill="#1378BA"/><path d="M30.7203 40.7203L32.0322 39.4084L27.7095 35.0857L42.9143 35.0857L42.9143 33.2359L27.7095 33.2359L32.0322 28.9133L30.7203 27.6014L24.1608 34.1608L30.7203 40.7203Z" fill="white"/></svg>
+        <button type="button" class="portfolio__pagination__btn portfolio__pagination__btn_prev">
+          <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.75 4.25H3.1225L5.8075 1.5575L4.75 0.5L0.25 5L4.75 9.5L5.8075 8.4425L3.1225 5.75H13.75V4.25Z" fill="#ffffff"/>
+          </svg>
         </button>
 
         <ul class="portfolio__pagination__list">
@@ -232,8 +233,10 @@
           <li><button class="portfolio__pagination__btn">28</button></li>
         </ul>
 
-        <button type="button" class="portfolio__pagination__next">
-          <svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg"><circle r="34" transform="matrix(-1 0 0 1 34 34)" fill="#1378BA"/><path d="M37.2797 40.7203L35.9678 39.4084L40.2905 35.0857L25.0857 35.0857L25.0857 33.2359L40.2905 33.2359L35.9678 28.9133L37.2797 27.6014L43.8392 34.1608L37.2797 40.7203Z" fill="white"/></svg>
+        <button type="button" class="portfolio__pagination__btn portfolio__pagination__btn_next">
+          <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z" fill="white"/>
+          </svg>
         </button>
       </div>
     </div>
@@ -244,7 +247,7 @@
   <div class="wrapper_fullHD">
     <div class="callback">
       <div class="wrapper">
-        <h3 class="white">ЗАКАЖИТЕ ИНДИВИДУАЛЬНЫЙ РАСЧЕТ ДЛЯ ПРОДВИЖЕНИЯ ВАШЕГО БИЗНЕСА</h3>
+        <h3 class="white">У ВАС ЕСТЬ ПОХОЖАЯ ЗАДАЧА? ОСТАВЬТЕ ЗАЯВКУ<br>И МЫ ПРЕДЛОЖИМ ВАРИАНТЫ ЕЕ РЕШЕНИЯ:</h3>
         <form method="post"
               action="#"
               enctype="multipart/form-data"
